--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <a href="index.html">main</a>
 
     <h1> contact &#128222;</h1>
-    <form method="post">
+    <form>
         <fieldset>
         <label for="username">username</label>
         <input type="text" id="username"/>
