--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <a href="index.html">main</a>
 
     <h1>  login </h1>
-    <form method="post">
+    <form >
         <label for="email">email</label>
         <input type="email" id="email"/>
         <label for="password">password</label>
